Pocket VOA - An online/offline reader for Voice of America news program.

Version 1.2.5 [11/11/2010]
	- New: Add SeekBar for local audio.
	- New: Improve UI.
	- New: Check new version release.
	- New: Disable concurrent download task.
	
Version 1.2.4 [19/09/2010]
	- Fix: Cannot view article due to data source content format changed.
	- New: Add category "Go English", "Word Master", "American Cafe", "Business Etiquette", "Sports English", "Words And Idioms".

Version 1.2.3 [28/07/2010]
	- Fix: Crash when play audio. [issue 11]
	- Fix: Crash when parse page. [issue 15]
	- Fix: Crash when restore Main Activity State. [issue 12]
	- Fix: Crash when download article. [issue 14]
	- New: Remove landscape orientation support.
	- New: Database backup&restore(just tested on rooted device).
	- New: Remove article max count constraint.
	- New: Text size settings.
	- New: Zoom support.

Version 1.2.2 [04/07/2010]
	- New: Add "Keep Screen On" option in Settings page.
	- Fix: Text is truncated when article is viewed in local.

Version 1.2.1 [02/07/2010]
	- New: Add crash report system.
	- Fix: Crash when play audio complete.

Version 1.2.0 [26/06/2010]
	- New: Play audio in background.

Version 1.1.1 [18/04/2010]
	- Fix: When in Show Activity, download translation will fail if user have not navigated to translation page before.
	- New: Add Traditional Chinese language support.

Version 1.1.0 [11/03/2010]
	- New: Add What is New? dialog when first run.
	- New: Add Help menu item.
	- New: Add indicator icon to article list. Letter T for which has Chinese translation, and letter L for which has Lyric.
	- New: Show Chinese translation in Show Activity.
	- New: Show Lyric in Show Activity.
	- New: Add Retry button to error alert dialog.
	- New: Keep screen on when application is in the foreground.
	- New: Remove www.iciba.com DataSource for it does not provide Chinese translation and Lyric.

Version 1.0.2 [14/01/2010]
	- New: Add Simplified Chinese language support.  
