@@ -3,7 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
-	<classpathentry kind="lib" path="libs/adlib_android.jar"/>
 	<classpathentry kind="lib" path="libs/acra-2.0.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
