@@ -35,5 +35,7 @@
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
+    <!-- 
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+     -->
 </manifest>
