@@ -4,6 +4,7 @@
 	- 改进：本地播放进度条可拖动。
 	- 改进：界面美化。
 	- 改进：自动更新。
+	- 改进：去除广告。
 	- 修正：并发任务数限制为一个。
 	
 版本 1.2.4 [2010-09-19]
