@@ -4,6 +4,7 @@
 	- 改進：本地播放進度條可拖動。
 	- 改進：界面美化。
 	- 改進：自動更新。
+	- 改進：去除廣告。
 	- 修正：並發任務數限制為一個。
 
 版本 1.2.4 [2010-09-19]
